hphp/hack/test/extracted_from_manual/07-traits-and-interfaces/03-using-a-trait-08.hack.exp
ERROR: File "03-using-a-trait-08.hack", line 13, characters 7-7:
Constant FOO is defined concretely in multiple ancestors (Typing[4374])
  File "03-using-a-trait-08.hack", line 10, characters 9-11:
  One conflicting definition is here
  File "03-using-a-trait-08.hack", line 4, characters 9-11:
  Another conflicting definition is here, inherited through T
ERROR: File "03-using-a-trait-08.hack", line 13, characters 28-28:
Some members in class `A` are incompatible with those declared in type `T` (Typing[4374])
  File "03-using-a-trait-08.hack", line 10, characters 9-11:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "03-using-a-trait-08.hack", line 4, characters 9-11:
  `FOO` inherited from `I1`
  File "03-using-a-trait-08.hack", line 10, characters 9-11:
  conflicts with constant `FOO` inherited from `I`.
