hphp/hack/test/extracted_from_manual/07-traits-and-interfaces/03-using-a-trait-08.hack
// @generated by hh_manual from manual/hack/07-traits-and-interfaces/03-using-a-trait.md
// @codegen-command : buck run fbcode//hphp/hack/src/hh_manual:hh_manual extract fbcode/hphp/hack/manual/hack/
interface I1 {
  const FOO = 'one';
}

trait T implements I1 {}

interface I {
  const FOO = 'two';
}

class A implements I { use T; }

<<__EntryPoint>>
function main() : void {
  \var_dump(A::FOO);
}
